tests/parse_print/autogen-bilals-fixed/1427d21b2cf2d582721ba5c391fdeb3e/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/1427d21b2cf2d582721ba5c391fdeb3e/1427d21b2cf2d582721ba5c391fdeb3e.eprime.essence:4:35:
unexpected undefined
expecting ), comma, or rest of range
            matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
                                      ^